Add Bootstrap + login part01

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,12 @@
 
 <!-- <div>Component Content</div> -->
 
-<router-outlet></router-outlet>
+<!-- TODO APPLICATION (header) -->
+<app-menu></app-menu>
+
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
+<!-- TODO APPLICATION (footer) -->
+<app-footer></app-footer>
