--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,10 @@
-<p>
+<h1>Welcome!</h1>
+
+<div class="container">
+
   welcome {{ name }}!
-</p>
+  <br>
+
+  You can manage your todos <a routerLink="/todos">here</a>
+
+</div>
